# yolox_ros

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/yolox_ros/: timer.h  yolox_ros_openvino.h  yolox_type.h
launch/: get_video.launch  yolox_openvino.launch
src/: default_camera_img.cpp  yolox_ros_openvino.cpp
